# SourceDigger

./: .gitignore  Cargo.toml  README.md  deploy.sh  release.sh  sourcedigger-server.service
.cargo/: config
deployment/: sourcedigger-server.service  sourcedigger-supervisor.service  supervisor.sh
lib/ctags/: Cargo.toml
lib/ctags/src/: lib.rs
lib/ctags/test_res/smoke/: ctags  example.c
src/: data.rs
src/admin/: main.rs  routes.rs
src/experiment/: ctags_to_diff.rs  main.rs  repo_to_ctags.rs
src/server/: autocomplete.rs  cached_file.rs  diffs.rs  diffsold.rs  doublelines.rs  main.rs  streamed_string_list_response.rs
static/: index.css  results-inner.css  results.css  results.js  welcome.css
static/common/: fonts.css  main.css
templates/: base.html.tera  footer.tera  index.html.tera  results.html.tera  welcome.html.tera
templates/admin/: add_repo.html.tera  index.html.tera  view_repo.html.tera
