[package]
name = "sourcedigger"
version = "0.1.0"
authors = ["David Shlemayev <david.shlemayev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4"
rocket_contrib = { version = "^0.4", default-features = false, features = ["serve", "tera_templates"] }
serde = { version = "1.0", features = ["derive"] }
git2 = "0.13.6"
regex = "1.3.9"
hex = "0.4.2"
rayon = "1.3.0"
subprocess = "0.2.4"
ctags = { path = "./lib/ctags" }
crossbeam = "0.7.3"
lazy_static = "1.4.0"

[[bin]]
name = "sourcedigger-admin"
path = "src/admin/main.rs"

[[bin]]
name = "sourcedigger-experiment"
path = "src/experiment/main.rs"

[[bin]]
name = "sourcedigger-server"
path = "src/server/main.rs"